# memory-router

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: mcp_offline_cases.json
memory_router/: __init__.py  adaptive_router.py  ask_service.py  benchmark.py  classifier.py  cli.py  config.py  context_builder.py  health.py  mcp_server.py  router.py  stats.py  token_optimizer.py
memory_router/memory/: __init__.py  auto_capture.py  consolidation.py  decay.py  importer.py  mycelium.py  palace.py  retrieval.py  sqlite_store.py  summarizer.py  vector_store.py  working_memory.py
memory_router/memory/obsidian/: __init__.py  exporter.py  index.py  models.py  renderer.py  utils.py  vault.py
memory_router/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  ollama_provider.py  openai_provider.py  ruflo_provider.py
memory_router/security/: __init__.py  encryption.py  keychain.py
memory_router/utils/: __init__.py  fs.py  logging.py  ollama.py  system.py  tokens.py
scripts/: naive_call.py  verify_tokens.py
tests/: test_adaptive_router.py  test_all_imports.py  test_ask_service.py  test_ask_service_integration.py  test_auto_capture.py  test_benchmark.py  test_benchmark_cases_file.py  test_build_context_mycelium.py  test_classifier.py  test_cli_entry.py  test_cli_prompt.py  test_cli_ui.py  test_coding_mode.py  test_config.py  test_consolidation.py  test_context_builder_v2.py  test_decay.py  test_encryption.py  test_encryption_warning.py  test_fts_sanitization.py  test_fts_search.py  test_health.py  test_health_extended.py  test_importer.py  test_keychain.py  test_logging.py  test_mcp_extended.py  test_mcp_imports.py  test_mcp_server_large_prompt.py  test_mcp_tools.py  test_mycelium.py  test_obsidian_cli.py  test_obsidian_exporter.py  test_obsidian_renderer.py  test_obsidian_vault.py  test_ollama_autostart.py  test_palace.py  test_permissions.py  test_production_hardening.py  test_providers.py  (+16 more)
