[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-router"
version = "0.2.0"
description = "Local-first LLM router with structured Memory Palace for token-efficient context"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Memory Router Contributors" }]
keywords = ["llm", "router", "memory", "cli", "local-first", "privacy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "keyring>=24.0.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
gemini = ["google-genai>=0.3.0"]
mcp = ["mcp>=1.0.0"]
encryption = ["cryptography>=41.0.0"]
tiktoken = ["tiktoken>=0.5.0"]
numpy = ["numpy>=1.24.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-genai>=0.3.0",
    "mcp>=1.0.0",
    "cryptography>=41.0.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1.0"]

[project.scripts]
memory-router = "memory_router.cli:entry"

[project.urls]
Homepage = "https://github.com/zucc12309/memory-router"
Issues = "https://github.com/zucc12309/memory-router/issues"

[tool.setuptools.packages.find]
include = ["memory_router*"]

[tool.ruff]
line-length = 100
target-version = "py39"
